# Excalibur

./: .env.example  .gitignore  Cargo.toml  example.config.toml  make_release.bat  run.bat  sqlx-data.json
.github/workflows/: rust.yml
migrations/: 20200727100318_guild_config_1.sql
src/: main.rs
src/commands/: checks.rs  config.rs  general.rs  mod.rs  moderation.rs  owner.rs  voice.rs
src/managers/: mod.rs
src/models/: bot_config.rs  guild_config.rs  mod.rs
src/utils/: mod.rs
